# Slate

./: .gitignore  AGENTS.md  CHANGE-EXPLANATION.md  CLAUDE.md  CODE-QUALITY.md  DESIGN.md  PRODUCT.md  README.md  agentkit.config.json  package-lock.json  package.json  vite.config.ts
.cursor/rules/: agentkit.md
.github/: pull_request_template.md
.impeccable/: design.json
docs/: ai-actions-brief.md  animation-brief.md  codebase-improvement-audit-brief.md  maintainability-code-quality-audit-brief.md  number-flow-animated-numbers.md  product-brief.md  roadmap.md
docs/plans/: 001-mvp-daily-planning-loop.md  002-menu-bar-popover-native-shell.md  003-sqlite-persistence.md  004-today-capacity-state.md  005-persistence-recovery-screen.md  006-ai-assist-plan-my-day-review-tray.md  007-ai-sdk-node-sidecar.md  008-remove-abandoned-scaffolding.md  009-number-flow-animated-header-numbers.md  010-ai-sidecar-packaging-spike.md  011-ai-assist-sidecar-vertical-slice.md  012-plan-my-day-sidecar-vertical-slice.md  013-ai-connection-settings-save-flow.md  014-ai-boundary-hardening-and-cleanup.md  015-reproducible-sidecar-bootstrap.md  016-bound-ai-context-title-length.md  017-align-agent-guidance-ai-status.md  018-complete-task-lifecycle.md  README.md
shared/: ai-catalog.json
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/scripts/: build-binary.mjs  ensure-binary.mjs
sidecar/src/: assist.test.ts  assist.ts  main.ts  plan.test.ts  plan.ts  protocol.test.ts  protocol.ts  provider.ts  sdk-load.test.ts  sdk-load.ts
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  credentials.rs  lib.rs  persistence.rs  sidecar.rs  window_controller.rs
src/components/: ai-review-tray.tsx  ai-review.tsx  planner-empty-state.tsx  route-motion.tsx  task-composer-footer.tsx  task-detail-panel.tsx  task-group.tsx  task-motion.tsx  task-row.tsx  task-selection.tsx  theme-provider.tsx  theme-toggle.tsx
src/lib/: ai-catalog.ts  local-date.ts  planner-query.tsx  planner.ts  settings-draft.test.mjs  settings-draft.ts  task-composer.ts  (+2 more)
(+31 files in other folders)
